re PR c++/29002 (ICE on array of ptr-to-member or struct containing ptr-to-member of unknown size)

2006-09-14  Andrew Pinski  <pinskia@physics.uc.edu>

        PR C++/29002
        * init.c (build_zero_init): If we have an error mark node for
        the array size, return.

2006-09-14  Andrew Pinski  <pinskia@physics.uc.edu>

        PR C++/29002
        * g++.dg/init/array22.C: New test.
        * g++.dg/init/array23.C: New test.

From-SVN: r116962