gcc/cp/init.c
@@ -223,6 +223,11 @@ build_zero_init (tree type, tree nelts, bool static_storage_p)
 				 nelts, integer_one_node);
       else
 	max_index = array_type_nelts (type);
+
+      /* If we have an error_mark here, we should just return error mark
+	 as we don't know the size of the array yet.  */
+      if (max_index == error_mark_node)
+	return error_mark_node;
       gcc_assert (TREE_CODE (max_index) == INTEGER_CST);
 
       /* A zero-sized array, which is accepted as an extension, will
